# linkedin-scraper-revised

./: .gitignore  .prettierrc  A_Search.py  B_Profiles.py  C_Insights.py  D_Make_File.py  Misc_B2_Redo_Profiles.py  Misc_C2_Redo_Insights.py  Procfile  README.md  logins.txt  main_script.py  package-lock.json  package.json  pyproject.toml  r_main.py  test.py  tsconfig.json  vars_mini.csv
Data/: 06-01-24_M0101_search_results.json  final_v1.csv
Functions/: Generate_Insights.py  Get_Profile.py  Utilities.py  r_validate.py
r_logs/test0/: 02-01-24_test0_ALog.txt
r_logs/test1/: logEntries.txt
r_logs/test99/: 06-01-24_test99_ALog.txt  logEntries.txt
r_logs/test_v1/: 06-01-24_test_v1_ALog.txt  07-01-24_test_v1_ALog.txt  20-01-24_test_v1_ALog.txt  logEntries.txt
src/: app.ts  db.ts  mw.ts  router.ts  slack.ts  utils.ts
src/entities/: Person.ts  Search.ts
src/migrations/: 1670167534805-init.ts  1673143134124-person.ts
