[tool.poetry]
name = "mentor_scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
selenium = "^4.1.0"
requests = "^2.27.1"
pandas = "^1.4.1"
webdriver-manager = "^3.7.0"
beautifulsoup4 = "^4.11.1"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
